# keytique

./: .env_example  .gitignore  README.md  cli.py  pyproject.toml
src/evaluation/: retrieval_eval.py
src/evaluation/data/: eval_set.json
src/llm/: client.py
src/llm/prompts/: feedback.md  query-builder.md
src/mie/: _analyzer.py  basic_pitch_analyzer.py  processor.py  schemas.py
src/mie/tests/: conftest.py  test_basic_pitch_analyzer.py  test_processor.py
src/rag/: config.py  embedding_model.py  eval_set_schema.json  frontmatter.md  frontmatter_template.yaml  indexer.py  retriever.py  schemas.py
src/rag/corpus/pitch/: ear-training-teaching-auralskills.md  key-signatures-accidentals-teachpianotoday.md  rectifying-hitting-wrong-notes-quora.md  wrong-notes-elimination-pianostreet.md
src/rag/corpus/timing/: counting-rhythm-keynotes.md  reading-rhythms-songtive.md  rhythm-learning-tips-reddit.md  rhythm-practice-practisingthepiano.md  systemic-approach-learning-rhythms.md
src/rag/evaluation/: retrieval_eval.py
