[project]
name = "keytique"
version = "0.1.0"
description = "To critisize your keys muahahah!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basic-pitch",
    "pydantic>=2.13.4",
]

[tool.uv.sources]
basic-pitch = { git = "https://github.com/warptengood/basic-pitch.git", branch = "py312-keras3-support" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]

[tool.ruff]
line-length = 150
