[project]
name = "keytique"
version = "0.1.0"
description = "To critisize your keys muahahah!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basic-pitch",
    "litellm>=1.90.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[tool.uv.sources]
basic-pitch = { git = "https://github.com/warptengood/basic-pitch.git", branch = "py312-keras3-support" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]

[tool.ruff]
line-length = 150
